# E2FM

./: ArrayMTFList.cpp  ArrayMTFList.h  BalancedTreeMTFList.cpp  BalancedTreeMTFList.h  BitReader.cpp  BitReader.h  BitSetRLEEncoder.cpp  BitSetRLEEncoder.h  BitWriter.cpp  BitWriter.h  Bookmark.cpp  Bookmark.h  Bucket.cpp  Bucket.h  Common.h  EFMCollection.cpp  EFMCollection.h  EFMIndex.cpp  EFMIndex.h  EncryptionManager.cpp  EncryptionManager.h  FMCollection.cpp  FMCollection.h  FastBWTransformer.cpp  FastBWTransformer.h  FileBitReader.cpp  FileBitReader.h  FileBitWriter.cpp  FileBitWriter.h  LICENSE.md  Main.cpp  Makefile.am  Makefile.in  MemoryBitReader.cpp  MemoryBitReader.h  README.md  RandomGenerator.cpp  RandomGenerator.h  SFMCollection.cpp  SFMCollection.h  (+12 more)
